testdata/merge/valid/06_default_value.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\TestApp]
@="DefaultValue"
"Named"="NamedValue"
