testdata/merge/invalid/err_invalid_hex.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"BadHex"=hex:01,02,GG,04
